--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,6 +1,8 @@
 
 .container {
   margin: 0 auto;
+  padding-left: 15px !important;
+  padding-right: 15px !important;
 }
 
 @media (min-width: 768px) {
