--- a/src/app/views/request.html
+++ b/src/app/views/request.html
@@ -11,12 +11,12 @@
 <body>
   <nav class="nav" appStickyNav>
     <div class="logo">
-      <a href="#"><span>T</span>atto.</a>
+      <a href="/"><span>T</span>atto.</a>
     </div>
   </nav>
 <header class="compact-header">
     <div class="content container">
-      <a class="go-back-link" href="/index.html">
+      <a class="go-back-link" href="/">
         <i class="icon icon-arrow-left"></i>
         <span>Prima pagină</span></a>
       <h1>Programare</h1>
@@ -59,7 +59,7 @@
   </main>
   <footer>
     <div class="container">
-      Proiect realizat de Radu Cătălin-Gabriel, Grupa 212
+      Proiect realizat de Radu Catalin, Grupa 312
     </div>
   </footer>
   <script type="module" src="scripts/index.js"></script>
