--- a/src/app/views/admin.html
+++ b/src/app/views/admin.html
@@ -15,13 +15,13 @@
     </div>
     <ul class="nav-menu">
       <li class="nav-link nav-special-link">
-        <a href="/request.html">Delogheaza-te</a>
+        <a href="/">Delogheaza-te</a>
       </li>
     </ul>
   </nav>
 <header class="compact-header">
     <div class="content container">
-      <a class="go-back-link" href="/index.html">
+      <a class="go-back-link" href="/">
         <i class="icon icon-arrow-left"></i>
         <span>Prima pagină</span></a>
       <h1>Listă cu programări</h1>
@@ -40,7 +40,7 @@
   </main>
   <footer>
     <div class="container">
-      Proiect realizat de Radu Cătălin-Gabriel, Grupa 212
+      Proiect realizat de Radu Catalin, Grupa 312
     </div>
   </footer>
   <script type="module" src="scripts/index.js"></script>
