--- a/src/app/views/index.html
+++ b/src/app/views/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav class="nav" appStickyNav>
     <div class="logo">
-      <a href="#"><span>T</span>atto.</a>
+      <a href="/"><span>T</span>atto.</a>
     </div>
     <ul class="nav-menu" appHamburgerMenu>
       <li class="nav-link">
@@ -24,7 +24,7 @@
         <a href="#price-section">Prețuri</a>
       </li>
       <li class="nav-link nav-special-link">
-        <a href="/request.html">Fă o programare</a>
+      <a href="/request">Fă o programare</a>
       </li>
     </ul>
   </nav>
@@ -97,7 +97,7 @@
   </main>
   <footer>
     <div class="container">
-      Proiect realizat de Radu Cătălin-Gabriel, Grupa 212
+      Proiect realizat de Radu Catalin, Grupa 312
     </div>
   </footer>
   <script type="module" src="scripts/index.js"></script>
